contrast color fix revert back

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
   font-size: 23px;
   background-size: cover;
   margin: 0; 
-  color: rgb(7, 122, 84);
+  color: white;
   text-align: center;
   line-height: 1.5;
 }
